--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,4 @@ wagtail-pdf-view==0.2.1
 wagtail-localize==1.5.2
 # Needs to be this version until weasyprint fixes some things: https://github.com/fdemmer/django-weasyprint/issues/71 
 weasyprint>=58.0,<59.0
+gettext>=0.15
